--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,9 @@ footer {
 }
 
 @media only screen and (max-width: 450px) {
+    html {
+        font-size: 12px;
+    }
     .calc_container {
         height: 450px;
         width: 350px;
